--- a/types/pubspec.yaml
+++ b/types/pubspec.yaml
@@ -1,7 +1,7 @@
 name: solvr_types
 version: 1.0.0
 author: Lars Tackmann <lars@solvr.io>
-description: Abstract binding tree 
+description: Types of operators and expressions supported by Solvr 
 dependencies:
   solvr_common:
     path: ../common
