--- a/kernel/pubspec.yaml
+++ b/kernel/pubspec.yaml
@@ -5,5 +5,7 @@ description: Math kernel
 dependencies:
   solvr_common:
     path: ../common
+  solvr_matchers:
+    path: ../matchers
 dev_dependencies:
   unittest: any
