--- a/common/pubspec.yaml
+++ b/common/pubspec.yaml
@@ -3,10 +3,10 @@ version: 1.0.0
 author: Lars Tackmann <lars@solvr.io>
 description: Common utility classes
 environment:
-  sdk: '>=0.8.7'
+  sdk: '>=0.8.10+6 <2.0.0'
 dependencies:
-  dice: '>=1.4.3'
-  log4dart: '>=1.4.11'
-  meta: '>=0.8.7'
+  dice: '>=1.4.4'
+  log4dart: '>=1.4.12'
+  meta: '>=0.8.8'
 dev_dependencies:
   unittest: any
