--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -1,7 +1,7 @@
 name: solvr_ui
 version: 1.0.0
 author: Lars Tackmann <lars@solvr.io>
-description: Shared HTML5 constructs
+description: Shared user interface constructs
 dependencies:
   polymer: any
   route: any
