refac type checker into analyzer

--- a/analyzer/pubspec.yaml
+++ b/analyzer/pubspec.yaml
@@ -1,7 +1,7 @@
-name: solvr_typechecker
+name: solvr_analyzer
 version: 1.0.0
 author: Lars Tackmann <lars@solvr.io>
-description: Type checker for the Solvr language
+description: Type analyzer for the Solvr language
 dependencies:
   solvr_ast:
     path: ../ast
